# esp32-blufi-cam

./: .cproject  .project  CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  main.h
main/ACInterface/: ACInf.c  ACInf.h  Message.c  Message.h  MessageHandle.c  MessageHandle.h
main/Interface/: FileAccess.c  UserFile.c  UserFile.h  UserTimer.c  UserTimer.h  UserUart.c  UserUart.h
main/Interface/Spiffs/: esp_spiffs.h  spiffs_vfs.c  spiffs_vfs.h
main/Task/: ACInf_Task.c  ACInf_Task.h  ProcessTask.c  ProcessTask.h  UartTask.c  UartTask.h  smartconf_task.c  smartconf_task.h
main/app/: app.c  app.h  app_debug.c  app_debug.h  app_delay.c  app_delay.h
main/app/Button/: HardButton.c  HardButton.h
main/app/cli/: app_cli.c  app_cli.h  shell.c  shell.h
main/app/device_info/: device_data.h  device_info.c  device_info.h
main/app/message/: message.c  message.h  server_message.c  server_message.h
main/app/mqtt/: MQTTClient.c  MQTTClient.h
main/app/smartconfig/: blufi.c  blufi.h  blufi_security.c
main/app/wifi/: Wifi.c  Wifi.h
